--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
   <div id="bookData" class="container">
     <div class="row" id="bookGrid"></div>
 </div>
+
+<footer>
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    <h5>Site para consulta de livros 100% gratis!</h5>
+    <hr>
+    © 2023 Copyright:
+    <a class="text-body" href="https://www.youtube.com/shorts/YWcAQdrLkT8">Projeto IF Sudeste MG</a>
+  </div>
+</footer>
+
 </body>
 
 
