--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h5>Site para consulta de livros 100% gratis!</h5>
     <hr>
     © 2023 Copyright:
-    <a class="text-body" href="https://www.youtube.com/shorts/YWcAQdrLkT8">Projeto IF Sudeste MG</a>
+    <a class="text-body" href="https://www.youtube.com/shorts/YWcAQdrLkT8">Projeto Aluno do IF Sudeste MG - Campus Barbacena</a>
   </div>
 </footer>
 
